[package]
name = "tflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barter-data = "0.6.2"
barter-integration = "0.5.1"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
csv = "1.1.6"
futures = "0.3.25"
indicatif = "0.17.2"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
tokio = "1.24.2"
